# polysock

./: Cargo.toml  Dockerfile  LICENSE  PKGBUILD  README.md
.github/workflows/: arch-release.yml  macos-release.yml  release.yml  ubuntu-release.yml  windows-release.yml
scripts/: polysock
src/: args.rs  main.rs  serde_helpers.rs  sock.rs  test_helpers.rs
src/modes/: mod.rs  oneliner.rs
src/sock/: decorators.rs  mod.rs
src/sockets/: mod.rs  tcp_client.rs  tcp_server.rs  terminal.rs  testgen.rs  udp.rs
