[package]
name = "polysock"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Socket management utility"
authors = ["Ilya Shishov <shish9919@gmail.com>"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
derive_builder = "0.20.2"
io-pipe = "0.7.3"
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
