[package]
name = "polysock"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Socket management utility"
authors = ["Ilya Shishov <shish9919@gmail.com>"]

[package.metadata.deb]
assets = [
    # Source, Destination, Permissions
    ["scripts/polysock", "/usr/share/bash-completion/completions/", "644"],
    ["target/release/polysock", "/usr/bin/", "755"],
]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
derive_builder = "0.20.2"
env_logger = "0.11.8"
log = "0.4.29"
paste = "1.0.15"
pretty-hex = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
